OldArchive/8e8377367b8711834fedfeccd5ba3a05-7885f3d27d18134d8479d2ab5250c852/output
+ clang++ -std=c++11 -Wall -pedantic -pthread main.cpp -O2
main.cpp:4:27: error: no type named 'type' in 'der'
    typedef typename Der::type type;
            ~~~~~~~~~~~~~~^~~~
main.cpp:7:14: note: in instantiation of template class 'CRTP<der>' requested here
struct der : CRTP<der>
             ^
main.cpp:14:9: warning: unused variable 'd' [-Wunused-variable]
    der d;
        ^
1 warning and 1 error generated.
